# spirit_editor

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build-release.md  error.md  rust-toolchain.toml  temple01.zone.ron  temple_intro.zone.ron  test_units.zone.ron  todo.md  zone01.zone.ron
assets/: doodad_manifest.doodadmanifest.ron  doodad_manifest.manifest.ron  editor_config.editorconfig.ron  liquid_manifest.liquidmanifest.ron  material_definitions.materialmanifest.ron  material_manifest.materialmanifest.ron  notworkingassets.manifest.ron  region_manifest.regionmanifest.ron  terrain_manifest.terrainmanifest.ron  tiles_config.ron
assets/clay_tiles/: gray_bricks_diffuse.tga  gray_bricks_normal.tga  gray_bricks_sm_diffuse.tga  gray_bricks_sm_normal.tga  marble_diffuse.tga  marble_normal.tga  shingles_diffuse.tga  shingles_normal.tga  stucco_decor_diffuse.tga  stucco_decor_normal.tga  stucco_normal.tga  stucco_sm_diffuse.tga  stucco_striped_diffuse.tga  stucco_striped_normal.tga  tile_types.ron  tiles_array_texture.tga  tiles_diffuse_texture.tga  tiles_generic_1_diffuse.tga  tiles_generic_1_normal.tga  tiles_generic_2_diffuse.tga  tiles_generic_2_normal.tga  tiles_ornate_1_diffuse.tga  tiles_ornate_1_normal.tga  tiles_ornate_2_diffuse.tga  tiles_ornate_2_normal.tga  wood_toon_2_diffuse.tga  wood_toon_2_normal.tga  wood_toon_3_diffuse.tga  wood_toon_3_normal.tga  wood_toon_diffuse.tga  wood_toon_normal.tga
assets/foliage/: foliage_config.ron  foliage_config_old.ron  foliage_manifest.ron
assets/levels/: academy_1.level.ron  city_vessara.level.ron  crypt_1.level.ron  crypt_bossroom.level.ron  dungeon_banesera_aruun.level.ron  dungeon_broken_elves.level.ron  dungeon_grove_cave.level.ron  dungeon_shallow_cave.level.ron  dungeon_viridian_hideout.level.ron  dungeon_viridian_temple.level.ron  editor_showcase.level.ron  fae_world.level.ron  fetid_hole.level.ron  grove.level.ron  house_interior_kieran.level.ron  player_shop_basic.level.ron  player_shop_cellar.level.ron  raven_woods.level.ron  sample_level.level.ron  vessara_enchanting_shop.level.ron  world.level.ron
assets/magic_fx/: exclamation.magicfx.ron  glowy_corona.magicfx.ron  portal_arch.magicfx.ron  spiderweb_line.magicfx.ron  sunshaft.magicfx.ron  water_ripples_1.magicfx.ron  waterfall.magicfx.ron
assets/material_definitions/: bark1.matdef.ron  branch.matdef.ron  cliff1.matdef.ron  cliff2.matdef.ron  cliff3.matdef.ron  cliff3_blue.matdef.ron  cliff4.matdef.ron  cliff5.matdef.ron  cliff5_blue.matdef.ron  dirttoon1.matdef.ron  grass1.matdef.ron  grass_simple.matdef.ron  leaves1.matdef.ron  leaves2.matdef.ron  leaves3.matdef.ron  leaves4.matdef.ron  mushroomflowers.matdef.ron  ornate_tiles_2.matdef.ron  ornate_tiles_3.matdef.ron  ornate_tiles_4.matdef.ron  rocks1.matdef.ron  rocks2.matdef.ron  rocks_fixed_dark.matdef.ron  rocks_fixed_white.matdef.ron  rocky_earth.matdef.ron  slate_1.matdef.ron  slate_2.matdef.ron  stone_wall_2.matdef.ron  tiled_cobbles_1.matdef.ron  tiled_marble.matdef.ron  tiled_marble_dark.matdef.ron  tiled_rocks_2.matdef.ron  tiled_stucco_dark.matdef.ron  wall1.matdef.ron  wall1_dark.matdef.ron  wall2.matdef.ron  wood1.matdef.ron  wood_floor.matdef.ron
assets/material_definitions_old/: branch.matdef.ron  cliff1.matdef.ron  cliff2.matdef.ron  cobbles_2.matdef.ron  leaves2.matdef.ron  ornate_tiles_1.matdef.ron  rocks2.matdef.ron  rocky_earth.matdef.ron  stone_floor.matdef.ron  stone_wall.matdef.ron  tiled_bricks_1.matdef.ron  tiled_cobbles_2.matdef.ron  tiled_stucco_light.matdef.ron  treeleavesfir.matdef.ron  undergrowth.matdef.ron  willow.matdef.ron  wood2.matdef.ron  wood5.matdef.ron
assets/material_overrides/: doodad_material_overrides.glb  material_types.ron
assets/material_replacements/: academy.matrep.ron  dark_elven_house.matrep.ron  dreamscape_castle.matrep.ron  human_tavern.matrep.ron  tree_ancient.matrep.ron  tree_birch.matrep.ron  tree_fir.matrep.ron  tree_suntail.matrep.ron
assets/material_replacements_old/: castle_stone.matrep.ron  dreamscape_castle.matrep.ron  dreamscape_castle_pixel.matrep.ron  dungeon_interior_prop.matrep.ron  human_house.matrep.ron  medieval_village.matrep.ron  tree_ancient_b.matrep.ron  tree_birch.matrep.ron  tree_meadow.matrep.ron  tree_pine.matrep.ron  tree_spruce.matrep.ron  tree_toon.matrep.ron
assets/materialize_defs/: slate_dark.material.toml  stone_wall_2.material.toml  stone_wall_3.material.toml
assets/materialize_defs_toml/: rocks_adamantite.material.toml  slate_dark.material.toml  stone_wall.material.toml
assets/prefabs/: TreeFir1.prefab.ron  academy_1_exterior.prefab.ron  blank.prefab.ron  castle_arch_door_2.prefab.ron  house1.prefab.ron  human_house_A.prefab.ron  inn_1_exterior.prefab.ron  medieval_house1.prefab.ron  medieval_house2.prefab.ron  medieval_house3.prefab.ron  medieval_house4.prefab.ron  player_shop_basic_exterior.prefab.ron  test_prefab.prefab.ron
assets/regions/: regions_config.ron
assets/shader_variants/: corona_blue.shadvar.ron  (+5 more)
crates/bevy_editor_pls_core/: Cargo.toml
crates/bevy_editor_pls_core/src/: editor.rs  editor_window.rs  lib.rs
crates/bevy_editor_pls_ext/: Cargo.toml
crates/bevy_editor_pls_ext/src/: lib.rs
crates/spirit_edit_core/: Cargo.toml
crates/spirit_edit_core/src/: lib.rs
crates/spirit_edit_core/src/doodads/: doodad.rs  doodad_manifest.rs  doodad_placement_preview.rs  mod.rs  picking.rs
crates/spirit_edit_core/src/placement/: mod.rs
crates/spirit_edit_core/src/zones/: mod.rs  zone_file.rs
examples/: raycasting.rs
scripts/: generate_doodad_manifests.rs  modify_doodad_manifest.rs  translate_zone_entities.rs  upgrade_zone_files.rs  upgrade_zones.rs
src/: asset_loading.rs  benchmarking.rs  camera.rs  clay_tiles.rs  clouds.rs  commands.rs  decal_manifest.rs  decals.rs  doodads.rs  editor_config.rs  editor_pls.rs  editor_state.rs  foliage.rs  level_config.rs  liquid.rs  loading.rs  main.rs  material_override_link.rs  material_overrides.rs  materialize_properties.rs  materials.rs  navmesh.rs  physics.rs  regions.rs  render.rs  tools.rs  ui.rs  utils.rs  virtual_link.rs  water.rs
(+858 files in other folders)
