[package]
name = "bevy_mesh_terrain_editor"
version = "0.13.12"
edition = "2021"
default-run = "main"

[dependencies]
bevy = "0.13.1"
bevy_egui = "0.25.0"


  
winit = { version = "0.29", default-features = false }
 
image = { version = "0.24", default-features = false }




 bevy_mesh_terrain = "0.13.24"  

#bevy_mesh_terrain =  {path="../bevy_mesh_terrain"}





 degen_toon_water = "0.13.9"

#degen_toon_water =  {path="../degen_toon_water"}


 bevy_regions = "0.13.5"
 


 

bevy_magic_fx = "0.13.3"


bevy_mod_picking = {version="0.18.0", features=["backend_raycast",  "highlight","selection"]}
bevy_mod_raycast = "0.17.0"
seldom_fn_plugin = "0.6.0"



 bevy_common_assets = {version="0.10.0", features= ["ron"]}
 

serde = { version = "1", features = ["derive"] }
   ron = "0.8.1"


bevy_editor_pls.workspace = true
bevy_editor_pls_core.workspace = true
bevy_editor_pls_default_windows = { workspace = true  } 
bevy_obj = "0.13.0"
 

anyhow = "1"
bevy_mod_sysfail = "7.0.0"
bevy-inspector-egui = "0.24.0"


 
#bevy_foliage_paint = "0.13.6"

bevy_foliage_paint = { git = "https://github.com/ethereumdegen/bevy_foliage_paint", rev = "16c0277050f1e1275f63a5e52925903b18d89b9a"}
bevy_asset_loader = "0.20.1"


[workspace.package]
version = "0.8.2"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = "In-App editor tools for bevy apps"
readme = "README.md"



[workspace]
members = ["crates/*"]
resolver = "2"


 

[workspace.dependencies]
bevy_editor_pls = { version = "0.8.2", path = "crates/bevy_editor_pls" }
bevy_editor_pls_core = { version = "0.8.2", path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.8.2", path = "crates/bevy_editor_pls_default_windows" }  

anyhow = "1"
bevy_mod_sysfail = "7.0.0"

bevy-inspector-egui = "0.23.4"
egui = "0.26"
egui_dock = "0.11"
egui-gizmo = "0.16"

 
[profile.dev.package."*"]
opt-level = 3

 





[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "generate_doodad_manifests"
path = "scripts/generate_doodad_manifests.rs"
