[package]
name = "spirit_editor"
version = "0.14.3"
edition = "2021"
default-run = "main"





[dependencies]
bevy = "0.14.1"
bevy_egui = "0.28.0"


  
winit = { version = "0.30", default-features = false }
 
image = { version = "0.25.1", default-features = false }




  bevy_mesh_terrain = "0.14.4"  

 #bevy_mesh_terrain =  {path="../bevy_mesh_terrain"}



#bevy_material_tool = "0.14.3"
bevy_material_tool = {path="../bevy_material_tool"}

 degen_toon_water = "0.14.1"

#degen_toon_water =  {path="../degen_toon_water"}


 bevy_regions = "0.14.1"
  
   #make sure this matches the version in spirit_edit_core 
 bevy_clay_tiles = "0.14.16"
 #bevy_clay_tiles =  {path="../bevy_clay_tiles"}
 

bevy_magic_fx = "0.14.2"


bevy_mod_picking = {version="0.20.0", features=["backend_raycast",  "highlight","selection"]}
bevy_mod_raycast = "0.18.0"


 # seldom_fn_plugin = "0.6.0"  # deprecated 



 bevy_common_assets = {version="0.11.0", features= ["ron"]}
 

serde = { version = "1", features = ["derive"] }
   ron = "0.8.1"
rand = "0.8"
spirit_edit_core.workspace=true 

 
bevy_editor_pls.workspace = true
bevy_editor_pls_core.workspace = true
bevy_editor_pls_default_windows = { workspace = true  } 
 
bevy_obj = "0.14.0"
 

anyhow = "1"
bevy_mod_sysfail = "7.0.0"
bevy-inspector-egui = "0.25.1"
bevy_asset_loader = "0.21.0"

 
bevy_foliage_tool =   "0.14.3"
 #bevy_foliage_tool =   {path = "../bevy_foliage_tool"}
 

  



[workspace.package]
version = "0.8.2"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = "In-App editor tools for bevy apps"
readme = "README.md"



[workspace]
members = ["crates/*"]
resolver = "2"


 

[workspace.dependencies]
bevy_editor_pls = { version = "0.8.2", path = "crates/bevy_editor_pls" }
bevy_editor_pls_core = { version = "0.8.2", path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.8.2", path = "crates/bevy_editor_pls_default_windows" }  
 
 spirit_edit_core =  "0.14.13"
#spirit_edit_core =   {path = "../spirit_edit_core"}
bevy_egui = "0.28.0"
rand = "0.8"
 

anyhow = "1"
bevy_mod_sysfail = "7.0.0"

bevy-inspector-egui = "0.25.1"




egui = "0.28"
egui_dock = "0.13"
# egui-gizmo = "0.16"  # deprecated ? 

transform-gizmo-bevy= "0.3"

 
[profile.dev.package."*"]
opt-level = 3

 





[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "generate_doodad_manifests"
path = "scripts/generate_doodad_manifests.rs"

[[bin]]
name = "upgrade_zone_files"
path = "scripts/upgrade_zone_files.rs"
