[package]
name = "spirit_editor"
version = "0.15.1"
edition = "2021"
default-run = "main"





[dependencies]
bevy = "0.15.1"
bevy_egui = "0.31.0"


  
winit = { version = "0.30", default-features = false }
 
image = { version = "0.25.1", default-features = false }




   #bevy_mesh_terrain = {version = "0.15.11", features=["physics"]  }
  degen_toon_terrain =  {path="../degen_toon_terrain", features=["physics"]}


 
   bevy_material_wizard = "0.15.5"

   #bevy_material_wizard = {path="../bevy_material_wizard"}


 degen_toon_water = "0.15.2" 
 # degen_toon_water =  {path="../degen_toon_water"}


 degen_toon_clouds = "0.15.3" 


 bevy_regions = "0.15.0"
  
   
 bevy_clay_tiles = "0.15.1"
 #bevy_clay_tiles =  {path="../bevy_clay_tiles"}
 

bevy_magic_fx = "0.15.3"


noise = "0.9"



# vendored into new bevy ! 
# bevy_mod_picking = {version="0.20.0", features=["backend_raycast",  "highlight","selection"]}
# bevy_mod_raycast = "0.18.0"

 

 bevy_common_assets = {version="0.12.0", features= ["ron"]}
 

serde = { version = "1", features = ["derive"] }
ron = "0.8.1"
rand = "0.8"
spirit_edit_core.workspace=true 

 
bevy_editor_pls.workspace = true
bevy_editor_pls_core.workspace = true
bevy_editor_pls_default_windows = { workspace = true  } 
 
  #i want to dclare it like this but it errors 
  # bevy_obj=  {version = "0.15",  default-features = false , features= ["mesh"] }   

  bevy_obj=  {git="https://github.com/ethereumdegen/bevy_obj" ,  default-features = false , features= ["mesh"] }   

anyhow = "1"
#bevy_mod_sysfail = "7.0.0"
bevy-inspector-egui = "0.28.0"
bevy_asset_loader = "0.22.0"

 
 bevy_foliage_tool =   "0.15.7"
  #bevy_foliage_tool =   {path = "../bevy_foliage_tool"}

# bevy_toon_shader =  { git = "https://github.com/tbillington/bevy_toon_shader"}
 
 
 
bevy_contact_projective_decals = {git= " https://github.com/ethereumdegen/bevy_contact_projective_decals "}
 
 


[workspace.package]
version = "0.8.2"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = "In-App editor tools for bevy apps"
readme = "README.md"



[workspace]
members = ["crates/*"]
resolver = "2"


 

[workspace.dependencies]
bevy_editor_pls = { version = "0.8.2", path = "crates/bevy_editor_pls" }
bevy_editor_pls_core = { version = "0.8.2", path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.8.2", path = "crates/bevy_editor_pls_default_windows" }  
 
 spirit_edit_core =  "0.15.7"
 #spirit_edit_core = {path="../spirit_edit_core"}

anyhow = "1"
bevy-inspector-egui = "0.28.0"

 

egui = "0.29"
  egui_dock = "0.14"
# egui-gizmo = "0.16"  # deprecated ? 

#transform-gizmo-bevy= "0.3"
transform-gizmo-bevy= {git= "https://github.com/ethereumdegen/transform-gizmo"}
# transform-gizmo-bevy= {path = "../transform-gizmo/crates/transform-gizmo-bevy"}


 
[profile.dev.package."*"]
opt-level = 3

 
 

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "generate_doodad_manifests"
path = "scripts/generate_doodad_manifests.rs"

[[bin]]
name = "upgrade_zone_files"
path = "scripts/upgrade_zone_files.rs"
