[package]
name = "bevy_editor_pls_core"
version.workspace = true
edition.workspace = true
license.workspace = true 

[dependencies]
bevy = { version = "0.16", default-features = false, features= ["bevy_render","bevy_window"]}
bevy-inspector-egui.workspace = true
indexmap = "2"
egui_dock.workspace = true
