[package]
name = "spirit_edit_core"
version.workspace = true
edition.workspace = true
license.workspace = true 
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

 

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["x11"] } 
bevy_clay_tiles.workspace = true 
bevy_editor_pls_core.workspace = true
bevy_egui.workspace = true
bevy_mod_raycast = "0.18.0"


bevy_mod_picking = "0.20.0" 
rand.workspace=true 



serde = { version = "1", features = ["derive"] }
  

 bevy_common_assets = {version="0.11.0", features= ["ron"]}
 
  
ron = "0.8.1"


[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "x11",

    "tonemapping_luts",
    "zstd",
    "ktx2",             # https://github.com/bevyengine/bevy/discussions/9100
] }
 